tests/src/frontend/typechecking/invalid/mutable_assign_tparam_object_2.sk
mutable base class A(mutable x: Int = 0)
mutable class B extends A

fun set<T: A>(b: T): void {
  b.!x = 37
}
